--- a/css/sections/_header.scss
+++ b/css/sections/_header.scss
@@ -6,9 +6,10 @@ header {
     background: no-repeat;
     background-image:
     //  linear-gradient(to right, transparentize(#8E2DE2, 0.2), transparentize(#4A00E0, 0.2)),
-        url(https://images.wallpaperscraft.com/image/android_os_gray_robot_33642_2048x1152.jpg);
+        url(https://w.wallhaven.cc/full/nm/wallhaven-nm8klm.png);
 
     background-size: cover;
+    background-position: center;
     color: #FFFFFF;
 
     h1 {
