--- a/css/sections/_organizers.scss
+++ b/css/sections/_organizers.scss
@@ -26,6 +26,8 @@
             box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.1);
 
             img {
+                padding-left: 20px;
+                padding-right: 20px;
                 min-height:350;
                 object-fit: contain;
             }
